--- a/src/index.html
+++ b/src/index.html
@@ -7,28 +7,7 @@
   <link href="./output.css" rel="stylesheet">
 </head>
 <body>
-    <h1 class="text-center md:text-3xl bg-green-500 text-white">Listen Songs</h1>
-    <div class="cursor-pointer text-center overflow-y-auto h-[500px]" id="allsong">
-        <!-- Your song list content goes here -->
-    </div>
-    <div class="bg-black text-white fixed bottom-0 w-full">
-        <div class="flex">
-            <h1 class="mx-5">Current Song</h1>
-            <div class="song" id="mysong"></div>
-        </div>
-        <div class="time" id="time"></div>
-        <div class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-700 progress-bar">
-            <div class="bg-blue-600 h-2.5 rounded-full"></div>
-        </div>
-        <div class="flex my-10 text-center justify-center">
-            <i id="NextSongs" class="fa-solid fa-2xl mx-5 fa-forward"></i>
-            <i id="playSong" class="fa-solid fa-2xl mx-5 fa-play btn"></i>
-            <i id="PauseSongs" class="fa-sharp fa-2xl mx-5 fa-solid fa-circle-pause"></i>
-            <i id="PreviousSongs" class="fa-solid fa-2xl mx-5 fa-backward"></i>
-        </div>
-    </div>
-    
-   
-    <script src="Audio.js"></script>
+  
+    <h1>xzgjhzgfhjdgfhdsghfgsdhfghdsfghds</h1>
 </body>
 </html>
